# medical-assistant-cmr

./: README.md  app.py  config.py  llm_response.py  medical_specialists.py  pyproject.toml  query_answer.py  retrieval_tool.py
data/: specialist_doctors_repo.csv
prompts/: medical_query_prompt.txt
