[tool.poetry]
name = "medical-assistant-cmr"
version = "0.1.0"
description = ""
authors = ["Boris B. <bamboriz1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.0.314"
python-dotenv = "1.0.0"
streamlit = "1.22.0"
openai = "0.27.6"
tabulate = "0.9.0"
aider-chat = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
